Fixes errors on ios safari.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,6 @@
-.swipe {
-    position: absolute;
-    width: 90%;
+body {
+    margin: 0;
+    touch-action: pan-x pan-y;
+    width: 100%;
+    height: 100%;
 }
